# openvpn_flutter

./: .gitignore  README.md  pubspec.yaml
android/: build.gradle
example/lib/: main.dart
ios/Classes/: SwiftOpenVPNFlutterPlugin.swift
lib/src/: vpn_engine.dart
lib/src/model/: vpn_status.dart
macos/: openvpn_flutter.podspec
macos/Classes/: OpenVPNFlutterPlugin.h  OpenVPNFlutterPlugin.m  SwiftOpenVPNFlutterPlugin.swift
windows/: CMakeLists.txt  WINDOWS_SETUP_GUIDE.md  openvpn_flutter_plugin.cpp  openvpn_flutter_plugin.h  vpn_manager.cpp  vpn_manager.h  wintun_manager.cpp  wintun_manager.h
windows/include/openvpn_flutter/: open_v_p_n_flutter_plugin.h  openvpn_flutter_plugin.h  openvpn_flutter_plugin_c_api.h
